--- a/QUE_MIRAS_MARRANA/index.html
+++ b/QUE_MIRAS_MARRANA/index.html
@@ -48,6 +48,36 @@
             }
         });
     </script>
+    <!-- Inicio de agregado de botón para actualizar la información -->
+    
+<button id="refreshButton">Refresh Info</button>
+<script>
+    document.getElementById('refreshButton').addEventListener('click', async function() {
+        document.getElementById('loading').style.display = 'block';
+        try {
+            const response = await fetch('https://dragonball-api.com/api/characters/66');
+            if (!response.ok) {
+                throw new Error('Network response was not ok');
+            }
+            const data = await response.json();
+            console.log(data);
+
+            document.getElementById('loading').style.display = 'none';
+            document.getElementById("name").textContent = data.name;
+            document.getElementById("image").src = data.image;
+            document.getElementById("race").textContent = data.race;
+            document.getElementById("gender").textContent = data.gender;
+            document.getElementById("height").textContent = data.height;
+            document.getElementById("weight").textContent = data.weight;
+            document.getElementById("birthYear").textContent = data.birth_year;
+            document.getElementById("description").textContent = data.description;
+        } catch (error) {
+            document.getElementById('loading').style.display = 'none';
+            console.error('Error fetching data:', error);
+        }
+    });
+</script>  
+    <!-- fin de agregado de botón para actualizar la información -->
 </body>
 </html>
 
